syntax = "proto3";

package proto;

option go_package = "scheduled";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/multiversx/mx-chain-core-go/data/smartContractResult/smartContractResult.proto";
import "github.com/multiversx/mx-chain-core-go/data/block/block.proto";
import "github.com/multiversx/mx-chain-core-go/data/transaction/transaction.proto";

message GasAndFees {
  bytes AccumulatedFees = 1 [(gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
  bytes DeveloperFees = 2 [(gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
  uint64 GasProvided = 3;
  uint64 GasPenalized = 4;
  uint64 GasRefunded = 5;
}

message ScheduledSCRs {
  bytes rootHash = 1;
  repeated SmartContractResult  scrs = 2;
  repeated Transaction invalidTransactions = 3;
  repeated MiniBlock scheduledMiniBlocks = 4;
  GasAndFees gasAndFees = 5;
}
